[Docs]: Explain platform setup and JavaFX fixes
Document Windows, Linux and macOS execution, SDKMAN selection and
WSL graphical requirements. Explain JAR dependencies, module paths
and manual JavaFX SDK fallback when runtime libraries are missing.
Describe cURL import and local profile, theme and density controls.

Assisted-by: Codex